fix(ticket): readability of FAQ articles

--- a/css/legacy/includes/_styles.scss
+++ b/css/legacy/includes/_styles.scss
@@ -700,13 +700,17 @@
    }
 
    .faqadd_block_content {
-      overflow-x: hidden;
-      overflow-y: auto;
+      overflow: auto;
       position: absolute;
       top: 40px;
       bottom: 0;
       left: 0;
       right: 0;
+   }
+
+   .faqadd_entries,
+   .faqadd_entries:hover {
+      color: initial;
    }
 
    .faqadd_entries {
